Fix: Quito barra invisible bottom de Reportar Problema (no permitía tocar elementos debajo de la barra).

--- a/discazos/static/css/discazos.css
+++ b/discazos/static/css/discazos.css
@@ -234,6 +234,9 @@ body {
 }
 
 .feedback-bar {
+  position: fixed;
+  right:0;
+  bottom:0;
   margin-right: 25px;
 }
 
